<resources>
    <string name="app_name">GIF Slash</string>

    <string name="placeholder">Placeholder</string>
    <string name="trending">Trending</string>
    <string name="categories">Categories</string>
    <string name="favorites">Favorites</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="submit">Submit</string>
    <string name="save_button">Save</string>
    <string name="description">Description</string>
    <string name="rating_label">Rating</string>
    <string name="language_label">Language</string>
    <string name="random_gif_label">Random GIF</string>
    <string name="random_sticker_label">Random Sticker</string>
    <string name="undo_string">UNDO</string>

    <string name="sticker_title">STICKERS</string>
    <string name="gif_title">GIFS</string>
    <string name="giphy_sticker_title">GIF/Sticker</string>
    <string name="giphy_random_history_title">History Of Random GIFS</string>
    <string name="save_as_favorite">Save as Favorite</string>
    <string name="record_limit">Total GIFS/Stickers Limit</string>
    <string name="search_term">Search Term</string>
    <string name="delete_all">Delete All</string>

    <string name="fields_required">All fields required!</string>
    <string name="success_message">Successfully saved!</string>
    <string name="write_permission_required">Storage permission required!</string>
    <string name="permission_granted">Permission granted!</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="connection_failed">Connection failed!</string>
    <string name="check_out_share">Check out this GIF/Sticker!</string>
    <string name="deleted_message">Item(s) successfully deleted!</string>
    <string name="update_message">Successfully updated!</string>
    <string name="restored">Item(s) restored!</string>
    <string name="checkbox_failed">Checkbox selection required!</string>

    <string name="save_to_folder">/GifSlash</string>
</resources>
